# orderflow-lab

./: .gitignore  FINAL_STATE.md  INSTALL.md  PROJECT_DESIGN.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json
apps/docs/: README.md
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/components/: AgentCard.tsx  AgentLeaderboard.tsx  CommandPalette.tsx  ExecutionSidebar.tsx  Marketing.tsx  OrderBookPanel.tsx  PriceChart.tsx  StatusBar.tsx  TradeTape.tsx
apps/web/app/hooks/: useOrderflowStream.ts
apps/web/app/lab/: page.tsx
apps/web/app/lib/: config.ts  control.ts  types.ts
infra/docker/: .env.example  README.md  docker-compose.yml
infra/docker/initdb/: 01-extensions.sql
infra/terraform/: README.md
research/: collect_data.py  simulation_v0.py  train_deeplob.py
research/artifacts/: deeplob.pt
research/notebooks/: README.md  autocorrelation_comparison.py
research/papers/: README.md
services/api/: .env.example  README.md  pyproject.toml
services/api/app/: main.py
services/api/app/api/: analytics.py  control.py  ws.py
services/api/app/core/: config.py
services/api/app/domain/: schemas.py
services/api/app/infra/: db.py
services/api/app/models/: __init__.py  deeplob.py
services/api/app/services/: agent_driver.py  broadcaster.py  forecast.py  simulation.py  storage.py
services/api/tests/: test_health.py
services/engine/: Cargo.toml  README.md
services/engine/.cargo/: config.toml
services/engine/core/: Cargo.toml
services/engine/core/src/: errors.rs  lib.rs  order_book.rs  types.rs
services/engine/core/tests/: engine_spec.rs  properties.rs
services/engine/py/: Cargo.toml  README.md  pyproject.toml
services/engine/py/src/: lib.rs
services/workers/: README.md
