[project]
name = "orderflow-api"
version = "0.0.0"
description = "Orderflow Lab FastAPI gateway."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "UNLICENSED" }
authors = [{ name = "Orderflow Lab" }]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "orderflow-sdk",
    "websockets>=13.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
