[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "orderflow-engine"
version = "0.0.0"
description = "PyO3 bindings for the Orderflow Lab matching engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
manifest-path = "Cargo.toml"
bindings = "pyo3"
features = ["pyo3/extension-module"]
